fixed overflow & search issue

--- a/openmetadata-ui/src/main/resources/ui/src/components/GlobalSearchBar/global-search-bar.less
+++ b/openmetadata-ui/src/main/resources/ui/src/components/GlobalSearchBar/global-search-bar.less
@@ -61,5 +61,6 @@
 
   .ant-popover-inner-content {
     padding: 16px 20px;
+    width: 100%;
   }
 }
